@@ -1,6 +1,8 @@
 Changes in libmpg123 libtool interface versions...
 
 45.0.45
+	- mpg123_read(), mpg123_decode(), and mpg123_replace_buffer() now taking
+          void* for output buffers
 	- value 0 for any rate in mpg123_format()/mpg123_fmt()
 	- use of mpg123_decoder() after track open supported
 	  (also as hack to trigger renegotiation of output format,
